--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-web/bundles/
-app/bootstrap.php.cache
-app/cache/*
-app/logs/*
-build/
-vendor
-composer.phar
+/web/bundles/
+/app/bootstrap.php.cache
+/app/cache/*
+/app/logs/*
+/build/
+/vendor
+/composer.phar
 
 
 /-misc
