Various updates. Mainly - entities and user auth

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,9 +1,9 @@
 parameters:
-    database_driver: pdo_pgsql
+    database_driver: pdo_mysql
     database_host: localhost
     database_port: null
     database_name: pr_data_survey
-    database_user: symfony
+    database_user: root
     database_password: hh
     mailer_transport: smtp
     mailer_host: localhost
