--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -5,8 +5,8 @@ framework:
     router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
     profiler: { only_exceptions: false }
 
-#web_profiler:
-#    toolbar: true
+web_profiler:
+    toolbar: true
 #    intercept_redirects: false
 
 monolog:
