Updated Symfony, implemented get_queue api method

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,7 +12,9 @@ security:
 
     providers:
         main:
-            entity: { class:  PhotoAssessmentBundle:User, property: id }
+            entity:
+                class:  PhotoAssessmentBundle:User
+                property: id
 
     firewalls:
         all:
