--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -12,3 +12,5 @@ parameters:
     locale: en
     secret: dd461dfe3d10c589f2ae3bccc445245b
     database_path: null
+    remember_me_token: 589f2ae3bccc445245bdd461dfe3d10c58
+    remember_me_cookie: remember_me
