--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,4 @@
-imports:
+aimports:
     - { resource: parameters.yml }
     - { resource: security.yml }
 
@@ -15,8 +15,6 @@ framework:
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  %locale%
     trust_proxy_headers: false # Should Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
-    session:
-      lifetime:       420000000
 
 # Twig Configuration
 twig:
