--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -6,7 +6,7 @@ framework:
     profiler: { only_exceptions: false }
 
 web_profiler:
-    toolbar: true
+#    toolbar: true
 #    intercept_redirects: false
 
 monolog:
