Added LuneticsLocaleBundle; translated some interface elements

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:           %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -49,6 +49,16 @@ doctrine:
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
+
+lunetics_locale:
+  allowed_locales:
+    - en
+    - ru
+  guessing_order:
+    - cookie
+    - router
+    - browser
+
 
 # Swiftmailer Configuration
 #swiftmailer:
