Added flickr photo crawler

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
@@ -1,3 +1,4 @@
 parameters:
     pat.queue_initial_size: 50
     pat.queue_extension_size: 50
+    pat.geograph_dir: %kernel.root_dir%/../web/content/geograph
