Added an option to set a fixed id of the first photo in the user's queue

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
@@ -1,4 +1,5 @@
 parameters:
+    pat.queue_first_photo_id: -1
     pat.queue_initial_size: 50
     pat.queue_extension_size: 25
     pat.geograph_dir: %kernel.root_dir%/../web/content/geograph
