Question about photo location became optional and was turned off.

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
@@ -3,3 +3,4 @@ parameters:
     pat.queue_initial_size: 50
     pat.queue_extension_size: 25
     pat.geograph_dir: %kernel.root_dir%/../web/content/geograph
+    pat.ask_location: false
