--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,13 +27,13 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        [PhotoAssessmentBundle]
-    #java: /usr/bin/java
+    java: %java_bin%
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        closure:
+            jar: %kernel.root_dir%/Resources/java/compiler.jar
+        yui_css:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor.jar
 
 # Doctrine Configuration
 doctrine:
