--- a/src/Kachkaev/AssetsVersionBundle/composer.json
+++ b/src/Kachkaev/AssetsVersionBundle/composer.json
@@ -19,13 +19,14 @@
 
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0,<2.3-dev",
+        "symfony/framework-bundle": ">=2.0,<2.3-dev"
     },
 
     "require-dev": {
     },
 
     "suggest": {
+        "symfony/assetic-bundle": "Integrates Assetic into Symfony2"
     },
 
     "autoload": {
