--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,14 +67,19 @@ kachkaev_counters:
 
 kachkaev_dropbox_backup:
     database:
-        name: %database_name%
-        user: %database_user%
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   %database_name%
+        user:     %database_user%
         password: %database_password%
+        
+        output_directory: pat-db/
+        output_fileprefix: dblocal_
+        output_compression: false
     dropbox:
         user: %dropbox_user%
         password: %dropbox_password%
-        directory: pat-db/
-        fileprefix: db_
         
 #kachkaev_assets_version: ~
 
