--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "jms/di-extra-bundle": "1.1.*",
         "jms/serializer-bundle": "dev-master",
         "kachkaev/assets-version-bundle": "dev-master",
+        "kachkaev/dropbox-backup-bundle": "dev-master",
         "lunetics/locale-bundle": "2.1.*"
     },
     "scripts": {
