--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,7 +26,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [PhotoAssessmentBundle]
+    bundles:        [KachkaevPhotoAssessmentBundle]
     java: %java_bin%
     filters:
         cssrewrite: ~
