--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,6 +5,7 @@ parameters:
     database_name: pr_data_survey
     database_user: 
     database_password: 
+    database_dropbox_prefix: db_
 
 	# these are not the tokens that are used on the production server ;-)
     locale: en
