Fixes after renaming PhotoAssessmentBundle to KachkaevPhotoAssessmentBundle

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,7 +13,7 @@ security:
     providers:
         main:
            entity:
-               class:  PhotoAssessmentBundle:User
+               class:  KachkaevPhotoAssessmentBundle:User
                property: id
 
     firewalls:
