--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /web/content/
 /web/static/css
 /web/static/js
+/app/bootstrap.php.cache
+/app/SymfonyRequirements.php
 /app/cache/*
 /app/logs/*
 /app/config/parameters.yml
