--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,8 +31,7 @@ assetic:
     filters:
         cssrewrite: ~
         closure:
-            api: ~
-            #jar: %kernel.root_dir%/Resources/java/compiler.jar
+            jar: %kernel.root_dir%/Resources/java/compiler.jar
         yui_css:
             jar: %kernel.root_dir%/Resources/java/yuicompressor.jar
 
