--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
@@ -4,3 +4,7 @@ parameters:
     pat.queue_extension_size: 25
     pat.geograph_dir: %kernel.root_dir%/../web/content/geograph
     pat.ask_location: false
+    pat.results.show_test_photo: false
+    pat.results.max_submitted_at: ~
+        # 1358183114 #14 Jan 
+        # 1359219914 # 26 Jan
