--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,8 +31,8 @@ assetic:
     filters:
         cssrewrite: ~
         closure:
-#           jar: %kernel.root_dir%/Resources/java/compiler.jar
-            api: ~
+           jar: %kernel.root_dir%/Resources/java/compiler.jar
+#            api: ~
         yui_css:
             jar: %kernel.root_dir%/Resources/java/yuicompressor.jar
 
