--- a/web/.htaccess
+++ b/web/.htaccess
@@ -37,3 +37,7 @@
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule ^(.*)$ p_app.php [QSA,L]
 </IfModule>
+
+<ifmodule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript text/javascript application/json
+</ifmodule>
