Filter responses in results util the end of March 2013

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/config/config.yml
@@ -6,7 +6,8 @@ parameters:
     pat.ask_location: false
     pat.survey_closed: true
     pat.results.show_test_photo: false
-    pat.results.max_submitted_at: ~
+    pat.results.max_submitted_at: 1364342400
+        # 1364342400 # 27 Mar 00:00:00
         # 1358183114 #14 Jan 
         # 1359219914 # 26 Jan
     pat.photos_location_grid.path: %kernel.root_dir%/../src/Kachkaev/PhotoAssessmentBundle/Resources/config/photos_location_grid.yml
